--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-   --Bright-orange: hsl(31, 77%, 52%);
+  --Bright-orange: hsl(31, 77%, 52%);
   --Dark-cyan: hsl(184, 100%, 22%);
   --Very-dark-cyan: hsl(179, 100%, 13%);
   --Transparent-white-paragraphs: hsla(0, 0%, 100%, 0.75);
@@ -17,7 +17,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Lexend Deca', sans-serif;
+  font-family: "Lexend Deca", sans-serif;
   background-color: var(--Verylight-gray-background-headings-buttons);
 }
 .container {
@@ -38,13 +38,13 @@ body {
   background-color: var(--Dark-cyan);
 }
 .luxury-box {
-  background-color:var(--Very-dark-cyan);
+  background-color: var(--Very-dark-cyan);
 }
 p:first-of-type {
   text-transform: uppercase;
   color: var(--Verylight-gray-background-headings-buttons);
   font-size: 30px;
-  font-family: 'Big Shoulders Display', cursive;
+  font-family: "Big Shoulders Display", cursive;
   margin: 30px 0 30px 0;
 }
 p:last-of-type {
@@ -92,7 +92,6 @@ button:hover {
     margin-top: 60px;
     display: flex;
     flex-wrap: nowrap;
-
   }
   button {
     margin: 60px 0 40px 0;
